# model-finetuning

./: .gitattributes  .gitignore  README.md  compare_models.py  export_merged_gguf.py  main.py  pyproject.toml  qlora_pipeline.py  teacher_infer.py  test.md
data/: README.md  dataset_card.md
data/seed/: seed_prompts.jsonl
data/sft/: cleaned.jsonl  prepared.jsonl  train.jsonl  val.jsonl
data/sft-1/: test.jsonl
data/sft-atomic-module/: atomic_modules_dataset.jsonl  system_prompt.txt  test.jsonl  train.jsonl  val.jsonl
data/sft-net/: stage1_dataset_mixed.jsonl  stage2_dataset_mixed.jsonl  stage3_dataset_mixed.jsonl  stage4_dataset_mixed.jsonl  stage_test_dataset_mixed.jsonl  stage_val_dataset_mixed.jsonl
data/sft-net-atomic/: test.jsonl  val.jsonl
data/sft-net/stage1/: train.jsonl
data/sft-net/stage2/: train.jsonl
data/sft-net/stage3/: train.jsonl  val.jsonl
data/sft-net/stage4/: test.jsonl  train.jsonl
data/sft-tools/: cleaned.jsonl  test.json
data/teacher_outputs/: teacher_sample.jsonl
scripts/: prepare_atomic_module_dataset.py  prepare_net_chat_data.py  prepare_qwen_chat_data.py
