[project]
name = "model-finetuning"
version = "0.1.0"
description = "For model finetuning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.108.1",
    "transformers>=4.56.2",
    "datasets>=4.1.1",
    "accelerate>=1.10.1",
    "peft>=0.17.1",
    "bitsandbytes>=0.47.0",
    "trl>=0.23.0",
    "evaluate>=0.4.6",
    "sacrebleu>=2.5.1",
    "rouge-score>=0.1.2",
]
